login-jwt-storage

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -56,7 +56,7 @@
 
                   
 
-                  <span class="textnone">Neil Alexander</span>
+                  <span class="textnone">{{username}}</span>
 
               </a>
 
