--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -32,20 +32,23 @@
         <div class="px-lg-5 py-lg-4 p-4 w-100 align-self-center">
             <h1>Cine Tomcat</h1>
 
-            <form>
+            <form (ngSubmit)="onLogin()" #f="ngForm" novalidate>
                 <div class="form-group mb-4">
-                  <label for="exampleInputEmail1" class="font-weight-bold">Email</label>
-                  <input type="email" class="form-control bg-dark-x border-0 text-light" 
-                  id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa tu email">
+                  <label for="username" class="font-weight-bold">Username</label>
+                  <input type="text" class="form-control bg-dark-x border-0 text-light" 
+                  name="username" [(ngModel)]="username" id="username" required
+                   placeholder="Ingresa tu username" >
                   
                 </div>
                 <div class="form-group mb-4">
-                  <label for="exampleInputPassword1" class="font-weight-bold">Password</label>
+                  <label for="password" class="font-weight-bold">Password</label>
                   <input type="password" class="form-control bg-dark-x border-0 mb-2 text-light" 
-                  id="exampleInputPassword1" placeholder="Ingresa tu password">
+                  name="password" [(ngModel)]="password" id="password" required
+                  placeholder="Ingresa tu password">
                 </div>
                 
-                <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
+                <button class="btn btn-primary w-100" [disabled]="!f.valid">
+                  Iniciar Sesión</button>
               </form>
         </div>
     </div>
