--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
 
                       <li><a href="#"><span class="item-text">About Us</span></a></li>
 
-                      <li><a href="#"> <span class="item-text">Cine</span></a></li>
+                      <li><a routerLink="/cine-list"> <span class="item-text">Cine</span></a></li>
 
                       <li><a href="#"> <span class="item-text">Cartelera</span></a></li>
 
